--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
                     <i class="fa-solid fa-house"></i>
                     <span>home</span>
                  </div>
-                 <div class="navLink">
+                 <div class="navLink"  onclick="window.location.href='./search.html'">
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <span>search</span>
                  </div>
@@ -95,7 +95,7 @@
                             <p>Keeping the childhood joy and wonder of animals alive.</p>
                         </div>
                         <div class="followed-by">
-                            <p>Followed by ajinkya.shirodkar, urstrulymahesh, sanky_cool + 1 more</p>
+                            <p>Followed by urstrulymahesh, sanky_cool + 1 more</p>
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
         var divFromHtml = document.getElementById("switch");
         // console.log(divFromHtml,"divFromHtml");
         // var h1 = document.createElement("h1");
-        // h1.innerText = "madhuri"
+        // h1.innerText = 
         // divFromHtml.append(h1)
         var button = '<div onclick="logout() "><i class="fa-solid fa-arrow-right-from-bracket"></i><span>Logout</span></div>'
         var name = `<p> ${currentUser.userName}</p>`;
